--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
+    "angular-calendar": "^0.31.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
@@ -38,6 +40,7 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^18.0.0",
     "@angular-devkit/build-angular": "^18.0.0",
     "@angular-eslint/builder": "^18.0.0",
     "@angular-eslint/eslint-plugin": "^18.0.0",
